@@ -1,6 +1,20 @@
 import os, sys
 from setuptools import setup, Command
 
+classifiers=['Development Status :: 6 - Mature',
+             'Intended Audience :: Developers',
+             'License :: OSI Approved :: MIT License',
+             'Operating System :: POSIX',
+             'Operating System :: Microsoft :: Windows',
+             'Operating System :: MacOS :: MacOS X',
+             'Topic :: Software Development :: Testing',
+             'Topic :: Software Development :: Libraries',
+             'Topic :: Utilities',
+             'Programming Language :: Python :: 2',
+             'Programming Language :: Python :: 3'] + [
+            ("Programming Language :: Python :: %s" % x) for x in
+                "2.4 2.5 2.6 2.7 3.0 3.1 3.2 3.3".split()]
+
 long_description = open("README.rst").read()
 def main():
     install_requires = ["py>=1.4.17"]
@@ -20,22 +34,10 @@ def main():
         author='Holger Krekel, Benjamin Peterson, Ronny Pfannschmidt, Floris Bruynooghe and others',
         author_email='holger at merlinux.eu',
         entry_points= make_entry_points(),
+        classifiers=classifiers,
         cmdclass = {'test': PyTest},
         # the following should be enabled for release
         install_requires=install_requires,
-        classifiers=['Development Status :: 6 - Mature',
-                     'Intended Audience :: Developers',
-                     'License :: OSI Approved :: MIT License',
-                     'Operating System :: POSIX',
-                     'Operating System :: Microsoft :: Windows',
-                     'Operating System :: MacOS :: MacOS X',
-                     'Topic :: Software Development :: Testing',
-                     'Topic :: Software Development :: Libraries',
-                     'Topic :: Utilities',
-                     'Programming Language :: Python :: 2',
-                     'Programming Language :: Python :: 3'] + [
-        ("Programming Language :: Python :: %s" % x) for x in
-            "2.4 2.5 2.6 2.7 3.0 3.1 3.2 3.3".split()],
         packages=['_pytest', '_pytest.assertion'],
         py_modules=['pytest'],
         zip_safe=False,
